# sdl-demos

./: .gitignore  README.md
asteroids/: CMakeLists.txt  readme.md
asteroids/src/: constants.h  main.cpp
asteroids/src/config/: colors.h  config.h
asteroids/src/entities/: 2dBody.h  asteroid.cpp  asteroid.h  body2d.cpp  body2d.h  bullet.cpp  bullet.h  bulletManager.cpp  bulletManager.h  player.cpp  player.h  simulation.cpp  simulation.h  spaceship.cpp  spaceship.h
asteroids/src/managers/: asteroidManager.cpp  asteroidManager.h  bulletManager.cpp  bulletManager.h  gameStateManager.cpp  gameStateManager.h  lives.cpp  lives.h  playerManager.cpp  playerManager.h  score.cpp  score.h  simulation.cpp  simulation.h
asteroids/src/math/: utils.cpp  utils.h  vector.cpp  vector.h
asteroids/src/utils/: controller.cpp  controller.h  numbers.cpp  numbers.h  shapes.h  text.cpp  text.h  utils.cpp
boxes/: CMakeLists.txt  README.md
boxes/src/: main.cpp
boxes/src/config/: constants.h
boxes/src/utils/: utils.cpp
naughts-and-crosses/: CMakeLists.txt  README.md
naughts-and-crosses/src/: colours.h  constants.h  globals.cpp  globals.h  main.cpp  shapeDrawer.cpp  shapeDrawer.h  utils.cpp  utils.h
noughts-and-crosses/: CMakeLists.txt  README.md
noughts-and-crosses/src/: colors.h  colours.h  constants.h  gameState.cpp  gameState.h  gameover.cpp  gameover.h  globals.h  gridItem.cpp  gridItem.h  main.cpp  shapeDrawer.cpp  shapeDrawer.h  states.h  textTexture.cpp  textTexture.h  tile.cpp  tile.h  tileGenerator.cpp  tileGenerator.h  utils.cpp  utils.h
particles/: CMakeLists.txt  README.md  dev-diary.md  readme.md
particles/src/: constants.h  globals.cpp  globals.h  main.cpp
particles/src/config/: colors.h  config.h
particles/src/entities/: obstacle.cpp  obstacle.h  particle.cpp  particle.h  simulation.cpp  simulation.h
particles/src/math/: Vector.cpp  Vector.h
particles/src/utils/: shapes.cpp  utils.cpp
pong/: CMakeLists.txt  README.md
pong/src/: ai.cpp  ai.h  ball.cpp  ball.h  constants.h  cpuPlayer.cpp  cpuPlayer.h  gameState.cpp  gameState.h  globals.cpp  globals.h  main.cpp  paddle.cpp  paddle.h  player.cpp  player.h  scoreUi.cpp  scoreUi.h  textTexture.cpp  utils.cpp
pong/src/config/: constants.h  game.h
pong/src/core/: gameState.h  gameStateManager.cpp  gameStateManager.h  inGameState.cpp  inGameState.h  pausedState.cpp  pausedState.h  score.h
pong/src/game/: ball.cpp  ball.h  cpuPlayer.cpp  cpuPlayer.h  gameState.cpp  gameState.h  paddle.cpp  paddle.h  player.cpp  player.h
pong/src/ui/: scoreUi.cpp  scoreUi.h
pong/src/utils/: textTexture.cpp  textTexture.h  utils.cpp  utils.h
